--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.1'
 
-    // Robolectric
+    // Unit Testing
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:shadows-support-v4:3.0'
     testCompile 'org.robolectric:robolectric:3.0'
+    //testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
