--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:shadows-support-v4:3.0'
     testCompile 'org.robolectric:robolectric:3.0'
-    //testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
